<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/dp16"
    android:paddingEnd="@dimen/dp16"
    android:paddingTop="@dimen/dp12"
    android:paddingBottom="@dimen/dp12"
    android:background="@color/colorCyanPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp24"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_user_avatar"
            android:layout_width="@dimen/dp100"
            android:layout_height="@dimen/dp100"
            android:layout_marginEnd="@dimen/dp16"
            android:contentDescription="@string/content_description_user_avatar"
            tools:background="@color/colorPrimary"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp21"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                tools:text="Devis Evianus"
                />

            <TextView
                android:id="@+id/tv_user_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp16"
                android:textColor="@color/colorWhite"
                tools:text="devisevianus"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_total_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp21"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                tools:text="20"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_followers"
                android:textSize="@dimen/sp16"
                android:textColor="@color/colorWhite"
                tools:text="@string/label_followers"
                />

        </LinearLayout>

        <View
            android:layout_width="@dimen/dp1"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp4"
            android:layout_marginBottom="@dimen/dp4"
            android:background="@color/colorWhite"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_total_starred"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp21"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                tools:text="100"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_starred"
                android:textSize="@dimen/sp16"
                android:textColor="@color/colorWhite"
                tools:text="@string/label_starred"
                />

        </LinearLayout>

        <View
            android:layout_width="@dimen/dp1"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp4"
            android:layout_marginBottom="@dimen/dp4"
            android:background="@color/colorWhite"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_total_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp21"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                tools:text="100"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_following"
                android:textSize="@dimen/sp16"
                android:textColor="@color/colorWhite"
                tools:text="@string/label_following"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>